--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Return2017</title>
+  <title>长春市第21中学2020届3班的空间</title>
   <link rel="stylesheet" href="./normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -23,7 +23,7 @@
       <div class="heart-piece-7"></div>
       <div class="heart-piece-8"></div>
     </div>
-    <p>加载中...</p>
+    <p>目前还什么都没有呢！</p>
   </div>
 </div>  
 </body>
