--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>长春市第21中学2020届3班的空间</title>
+  <title>21中学2020届3班的空间</title>
   <link rel="stylesheet" href="./normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 
