--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="clear"> <div class="introduct"> 
             <img class="avatar" src="https://pan.aizhancloud.cn/view.php/5f0fcdfe66fd8ceec66929883382f6a8.jpg"> <p>坚硬的代替了那些柔软的，清晰的取代了那些模糊的。那些滑溜溜和黏糊糊的东西，带你来到了世界的角落。</p> 
             <p style="padding-bottom:1em;">How lucky to meet you!</p> 
-            <p>你好，这里是西西 <sup>Xixi</sup> ，23岁，是学生，对有趣的世界和可能有趣的你感到好奇，热爱Tech和ACG文化，正在尝试从事互联网产品/Web开发相关工作。</p> 
+            <p>您好，这里是三班 <sup>Xixi</sup> ，是学生，对有趣的世界和可能有趣的你感到好奇。</p> 
             <p>希望能与你在比特之海的繁星之下相见！</p> 
             <div class="chatbox">   <div class="line loading"> <span></span> 
             <span></span> <span></span> </div> </div> </div> 
